# deciduous

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  ROADMAP.md
.claude/commands/: context.md  decision.md  sync-graph.md
.deciduous/: deciduous.db.backup
.deciduous/web/: graph-data.json
.windsurf/: memories.md
.windsurf/rules/: context.md  deciduous.md
docs/: analyzer.html  decision-graph.md  git-history.json  graph-data.json  index.html  story.html
docs/demo/: git-history.json  graph-data.json  index.html
docs/demo/assets/: index-CwIL3c43.js  index-D0la3hrX.js  index-rH9PIz2u.css
src/: config.rs  context.rs  db.rs  diff.rs  export.rs  init.rs  lib.rs  lock.rs  main.rs  schema.rs  serve.rs  viewer.html
src/acp/: client.rs  config.rs  mod.rs  tui.rs
src/analyzer/: spectral.rs
src/tui/: mod.rs  state.rs  update.rs
web/: package.json  vite.embed.config.ts  vite.pages.config.ts
web/docs/: PLAN-acp-proxy-multi-file-sessions.md
web/src/: App.tsx
web/src/components/: Layout.tsx
web/src/hooks/: useGraphData.ts
web/src/views/: DagView.tsx
