[package]
name = "deciduous"
version = "0.1.0"
edition = "2021"
description = "Decision graph tooling for AI-assisted development"
license = "MIT"
repository = "https://github.com/notactuallytreyanastasio/deciduous"
homepage = "https://github.com/notactuallytreyanastasio/deciduous"
readme = "README.md"
keywords = ["decision-graph", "ai-development", "context-management", "claude"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP server for graph viewer
tiny_http = "0.12"
serde_urlencoded = "0.7"

# Date/time
chrono = "0.4"

# SQLite ORM with migrations
diesel = { version = "2.2", features = ["sqlite", "r2d2", "64-column-tables"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }

# Colored terminal output
colored = "2.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
